# doodlebug

./: LICENSE  README.md  pyproject.toml
src/: cli.py
src/doodlebug/: cli.py  model.py  optimize.py  point_manager.py  view.py
src/doodlebug/core/: model.py  optimize.py  optimize_utils.py  updater.py
src/doodlebug/graph/: curve.py  ellipse.py  line.py
src/doodlebug/subcommands/: config.py  data.py  model.py  noise.py  optimize.py  optimizer.py  show.py  updater.py  wrap.py
